--- a/server/auth-service/package.json
+++ b/server/auth-service/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/wubeZ/create-express-ts-starter.git"
   },
   "scripts": {
-    "dev": "bun run --watch src/server.ts",
+    "dev": "bun run --watch src/server.ts | npx pino-pretty",
     "start": "bun dist/server.js | npx pino-pretty",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
@@ -43,13 +43,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "kysely": "^0.27.4",
     "mongoose": "^8.2.3",
-    "pino": "^8.19.0"
+    "pg": "^8.12.0",
+    "pino": "^8.19.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.8",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
@@ -57,6 +62,7 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "kysely-codegen": "^0.16.5",
     "nodemon": "^3.1.0",
     "onchange": "^7.1.0",
     "pino-pretty": "^11.0.0",
