--- a/server/auth-service/package.json
+++ b/server/auth-service/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.4",
     "pg": "^8.12.0",
     "pino": "^8.19.0",
@@ -54,6 +55,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/pg": "^8.11.8",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
