Updated: Enabled strict mode in tsconfig

--- a/server/auth-service/tsconfig.json
+++ b/server/auth-service/tsconfig.json
@@ -8,8 +8,7 @@
     "noEmit": true,
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "types": ["bun-types"]
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
