Updated: added bun-types to tsconfig

--- a/server/auth-service/tsconfig.json
+++ b/server/auth-service/tsconfig.json
@@ -9,6 +9,8 @@
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    "types": ["bun-types"]
   }
 }
